--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Teddy TRex Candy Machine UI" />
         <link rel="apple-touch-icon" href="/logo192.png" />
+        <link rel="stylesheet" href="/custom.css" />
         <link rel="manifest" href="/manifest.json" />
-        <title>Candy Machine UI</title>
+        <title>Official Mint | Teddy Trex</title>
         <link href="/static/css/main.27d5ecdb.chunk.css" rel="stylesheet" />
     </head>
 
