--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
         <title>Official Mint | Teddy Trex</title>
         <link href="/static/css/main.27d5ecdb.chunk.css" rel="stylesheet" />
     </head>
-
-    
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div class="wrapper">
             <div class="mint-top">
                 <img class="logo" src="/TeddyTrexLogo.png" alt="Teddy TRex(TTREX)" />
+                <h1>OFFICIAL MINT</h1>
             </div>
             <div class="box">
                 <div class="mint-img"><img class="photo1" src="/DinoCycle3.gif" alt="Teddy Trex, which one will you get?" /></div>
