--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
+
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+          </div>
+
         <div class="wrapper">
             <div class="mint-top">
                 <img class="logo" src="/TeddyTrexLogo.png" alt="Teddy TRex(TTREX)" />
