--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
         <div class="topnav">
             <a class="active" href="#home">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+            <a href="#Home">Home</a>
+            <a href="#Buy">Buy</a>
+            <a href="#Mint">Mint</a>
+            <a href="#Verify">Verify</a>
+            <a href="#Rarity">Rarity</a>
           </div>
 
         <div class="wrapper">
