--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
+        
+        <div id="pxlogo"> 
+            <img src="/pxlogo.png"> 
+        </div> 
 
         <div class="topnav">
             <a href="#Buy">Buy</a>
