--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
               </div>
 
             <div class="mint-top">
-                <img class="logo" src="/TeddyTrexLogo.png" alt="Teddy TRex(TTREX)" />
+                <img class="logo" src="/TeddyTrexCandyMachine/TeddyTrexLogo.png" alt="Teddy TRex(TTREX)" />
             </div>
             <div class="box">
-                <div class="mint-img"><img class="photo1" src="/DinoCycle3.gif" alt="Teddy Trex, which one will you get?" /></div>
+                <div class="mint-img"><img class="photo1" src="/TeddyTrexCandyMachine/DinoCycle3.gif" alt="Teddy Trex, which one will you get?" /></div>
             </div>
            
             <div class="mint-wrapper"><div id="root"></div></div>
