--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="/favicon.ico" />
+        <link rel="icon" href="/TeddyTrexCandyMachine/favicon.ico" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Teddy TRex Candy Machine UI" />
-        <link rel="apple-touch-icon" href="/logo192.png" />
-        <link rel="stylesheet" href="/custom.css" />
-        <link rel="manifest" href="/manifest.json" />
+        <link rel="apple-touch-icon" href="/TeddyTrexCandyMachine/logo192.png" />
+        <link rel="stylesheet" href="/TeddyTrexCandyMachine/custom.css" />
+        <link rel="manifest" href="/TeddyTrexCandyMachine/manifest.json" />
         <title>Official Mint | Teddy Trex</title>
-        <link href="/static/css/main.27d5ecdb.chunk.css" rel="stylesheet" />
+        <link href="/TeddyTrexCandyMachine/static/css/main.27d5ecdb.chunk.css" rel="stylesheet" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         
         <div id="pxlogo"> 
-            <img src="/pxlogo.png"> 
+            <img src="/TeddyTrexCandyMachine/pxlogo.png"> 
         </div> 
 
         <div class="wrapper">
@@ -163,7 +163,7 @@
                 r();
             })([]);
         </script>
-        <script src="/static/js/2.46adb5f0.chunk.js"></script>
-        <script src="/static/js/main.215af441.chunk.js"></script>
+        <script src="/TeddyTrexCandyMachine/static/js/2.46adb5f0.chunk.js"></script>
+        <script src="/TeddyTrexCandyMachine/static/js/main.215af441.chunk.js"></script>
     </body>
 </html>
