--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
                 <a href="#Verify">Verify</a>
                 <a href="#Rarity">Rarity</a>
                 <a href="#Mint">Mint</a>
-                <a href="#Buy">Buy</a>
+
+                <div class="Buy">
+                    <button class="dropbtn">Buy</button>
+                    <div class="dropdown-content">
+                    <a href="#">SolSea</a>
+                    <a href="#">MagicEden</a>
+                    <a href="#">Metaplex</a>
+                    </div>
+                  </div>
+
+               
                 <a class="active" href="#home">Home</a>
               
               </div>
