--- a/index.html
+++ b/index.html
@@ -18,16 +18,28 @@
 
         <ul>
             <li><a href="#home">Home</a></li>
+            <li><a href="#verify">Verify</a></li>
+            <li><a href="#rarity">Rarity</a></li>
             <li><a href="#mint">Mint</a></li>
             <li class="dropdown">
-              <a href="javascript:void(0)" class="dropbtn">Buy</a>
+              <a href="javascript:void(0)" class="dropbtn">Project</a>
               <div class="dropdown-content">
-                <a href="#">SolSea</a>
-                <a href="#">MagicEden</a>
-                <a href="#">SolanArt</a>
+                <a href="#">SolRugs</a>
+                <a href="#">TeddyTrex</a>
+                <a href="#">SeaMonsters</a>
               </div>
             </li>
-          </ul>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Buy</a>
+                <div class="dropdown-content">
+                  <a href="#">SolSea</a>
+                  <a href="#">MagicEden</a>
+                  <a href="#">SolanArt</a>
+                </div>
+              </li>
+        </ul>
+
+
           <div id="pxlogo">      
             <img src="/TeddyTrexCandyMachine/pxlogo.png"> 
         </div> 
