--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </div>
             </li>
             <li class="dropdown">
-                <a href="javascript:void(0)" class="dropbtn">Buy</a>
+                <a href="javascript:void(0)" class="dropbtn">Store</a>
                 <div class="dropdown-content">
                   <a href="#">SolSea</a>
                   <a href="#">MagicEden</a>
