--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="/TeddyTrexCandyMachine/favicon.ico" />
+        <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Teddy TRex Candy Machine UI" />
-        <link rel="apple-touch-icon" href="/TeddyTrexCandyMachine/logo192.png" />
-        <link rel="stylesheet" href="/TeddyTrexCandyMachine/custom.css" />
-        <link rel="manifest" href="/TeddyTrexCandyMachine/manifest.json" />
+        <link rel="apple-touch-icon" href="/logo192.png" />
+        <link rel="stylesheet" href="/custom.css" />
+        <link rel="manifest" href="/manifest.json" />
         <title>Official Mint | Teddy Trex</title>
-        <link href="/TeddyTrexCandyMachine/static/css/main.27d5ecdb.chunk.css" rel="stylesheet" />
+        <link href="/static/css/main.27d5ecdb.chunk.css" rel="stylesheet" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -41,16 +41,16 @@
 
 
           <div id="pxlogo">      
-            <img src="/TeddyTrexCandyMachine/pxlogo.png"> 
+            <img src="/pxlogo.png"> 
         </div> 
 
         <div class="wrapper">       
 
             <div class="mint-top">
-                <img class="logo" src="/TeddyTrexCandyMachine/TeddyTrexLogo.png" alt="Teddy TRex(TTREX)" />
+                <img class="logo" src="/TeddyTrexLogo.png" alt="Teddy TRex(TTREX)" />
             </div>
             <div class="box">
-                <div class="mint-img"><img class="photo1" src="/TeddyTrexCandyMachine/DinoCycle3.gif" alt="Teddy Trex, which one will you get?" /></div>
+                <div class="mint-img"><img class="photo1" src="/DinoCycle3.gif" alt="Teddy Trex, which one will you get?" /></div>
             </div>
            
             <div class="mint-wrapper"><div id="root"></div></div>
@@ -177,7 +177,7 @@
                 r();
             })([]);
         </script>
-        <script src="/TeddyTrexCandyMachine/static/js/2.46adb5f0.chunk.js"></script>
-        <script src="/TeddyTrexCandyMachine/static/js/main.215af441.chunk.js"></script>
+        <script src="/static/js/2.46adb5f0.chunk.js"></script>
+        <script src="/static/js/main.215af441.chunk.js"></script>
     </body>
 </html>
