--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
        
 
         <ul>
-            <li><a href="#verify">Verify</a></li>
-            <li><a href="#rarity">Rarity</a></li>
+            <li><a href="metaplex.pixeldust.tv">Metaplex</a></li>
             <li><a href="#mint">Mint</a></li>
             <li class="dropdown">
               <a href="javascript:void(0)" class="dropbtn">Project</a>
