--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <noscript>You need to enable JavaScript to run this app.</noscript>
        
         <ul>
+			<li><a></a>    </li>
             <li><a href="https://metaplex.pixeldust.tv">Metaplex</a></li>
             <li><a href="#mint">Mint</a></li>
             <li class="dropdown">
@@ -39,8 +40,7 @@
 
 
           <div id="pxlogo">      
-            <img src="/pxlogo.png"> 
-        </div> 
+        <a href="www.pixeldust.tv"><img src="/pxlogo.png"></a> </div> 
 
         <div class="wrapper">       
 
