--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <a href="#">SolanArt</a>
                 </div>
       </li>
-              <li><a href="#home">Home</a></li>
+              <li><a href="https://nft.pixeldust.tv">Home</a></li>
         </ul>
 
     <img src="NFTGrid.png" width="812" height="806" alt="" class="floating"/>
