--- a/TTREX.html
+++ b/TTREX.html
@@ -35,7 +35,7 @@
                   <a href="#">SolanArt</a>
                 </div>
               </li>
-              <li><a href="#home">Home</a></li>
+              <li><a href="https://nft.pixeldust.tv">Home</a></li>
         </ul>
 
 
