--- a/index.html
+++ b/index.html
@@ -37,9 +37,15 @@
                   <a href="#">SolanArt</a>
                 </div>
       </li>
-              <li><a href="https://nft.pixeldust.tv">Home</a></li>
+              <li><a href="#home">Home</a></li>
         </ul>
-
-    <img src="NFTGrid.png" width="812" height="806" alt="" class="floating"/>
+<table width="100%" border="0"  class="hero">
+  <tbody>
+        <tr>
+          <td><img src="NFTGrid.png" width="812" height="806" alt="" class="floating"/></td>
+          <td class="avatar"><img src="TeddyAvatar.png"  alt=""/></td>
+        </tr>
+  </tbody>
+    </table>
 </body>
 </html>
