--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <tbody>
         <tr>
           <td><img src="NFTGrid.png" width="812" height="806" alt="" class="floating"/></td>
-          <td class="avatar"><img src="TeddyAvatar.png"  alt=""/></td>
+          <td class="avatar"><img src="Avitar.gif"  alt=""/></td>
         </tr>
   </tbody>
     </table>
