--- a/TTREX.html
+++ b/TTREX.html
@@ -57,7 +57,7 @@
                 <ul>
                     <li><a href="https://www.pixeldust.tv">Home</a></li>
                     <li><a href="https://discord.gg/hVaMCn2Y">Discord</a></li>
-                    <li><a href="https://twitter.com/Pixelduststudio">Twitter</a></li>
+                    <li><a href="https://nft.pixeldust.tv/TTREX">Twitter</a></li>
                 </ul>
             </footer>
         </div>
