--- a/index.html
+++ b/index.html
@@ -47,5 +47,12 @@
         </tr>
   </tbody>
     </table>
+
+    <footer>
+      <ul>
+          <li><a href="https://discord.gg/hVaMCn2Y">Discord</a></li>
+          <li><a href="https://nft.pixeldust.tv/TTREX">Twitter</a></li>
+      </ul>
+  </footer>
 </body>
 </html>
