--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <footer>
       <ul>
           <li><a href="https://discord.gg/hVaMCn2Y">Discord</a></li>
-          <li><a href="https://nft.pixeldust.tv/TTREX">Twitter</a></li>
+          <li><a href="https://twitter.com/PixeldustNFT">Twitter</a></li>
       </ul>
   </footer>
 </body>
