--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
     <footer>
       <ul>
-          <li><a href="https://discord.gg/hVaMCn2Y">Discord</a></li>
-          <li><a href="https://twitter.com/PixeldustNFT">Twitter</a></li>
+          <li><a href="https://discord.gg/hVaMCn2Y"><img src="/discord.png"></a></li>
+          <li><a href="https://twitter.com/PixeldustNFT"><img src="/twitter.webp"></a></li>
       </ul>
   </footer>
 </body>
