--- a/TTREX.html
+++ b/TTREX.html
@@ -55,8 +55,8 @@
             <div class="mint-info">After a successful mint, it takes about 30 seconds for the "Remaining" quantity to be updated.</div>
             <footer>
                 <ul>
-                    <li><a href="https://discord.gg/hVaMCn2Y">Discord</a></li>
-                    <li><a href="https://twitter.com/PixeldustNFT">Twitter</a></li>
+                    <li><a href="https://discord.gg/hVaMCn2Y"><img src="/discord.png" ></a></li>
+                    <li><a href="https://twitter.com/PixeldustNFT"><img src="/twitter.png"></a></li>
                 </ul>
             </footer>
         </div>
