--- a/index.html
+++ b/index.html
@@ -14,31 +14,41 @@
     </head>
     <body>
     
+	<div id="pxnav">
+		  <h1><img src="/pxlogo.png"> <a href="www.pixeldust.tv"></a> </h1>
+		  <ul>
+		    <li>
+		      <h3><a></a></h3>
+	        </li>
+		    <li>
+		      <h3><a href="https://metaplex.pixeldust.tv">Metaplex</a></h3>
+	        </li>
+		    <li class="dropdown">
+		      <h3><a href="javascript:void(0)" class="dropbtn">Mint</a> </h3>
+		      <div class="dropdown-content">
+		        <h3><a href="https://nft.pixeldust.tv/TTREXMint">TeddyTrex</a> </h3>
+	          </div>
+	        </li>
+		    <li class="dropdown">
+		      <h3><a href="javascript:void(0)" class="dropbtn">Project</a> </h3>
+		      <div class="dropdown-content">
+		        <h3><a href="#">SolRugs</a> <a href="https://nft.pixeldust.tv/TTREX">TeddyTrex</a> <a href="#">SeaMonsters</a> </h3>
+	          </div>
+	        </li>
+		    <li class="dropdown">
+		      <h3><a href="javascript:void(0)" class="dropbtn">Store</a> </h3>
+		      <div class="dropdown-content">
+		        <h3><a href="https://solsea.io/collection/61fadf96872a3b5b0f85ddd0">SolSea</a> <a href="#">MagicEden</a> <a href="#">SolanArt</a> </h3>
+	          </div>
+	        </li>
+		    <li>
+		      <h3><a href="#home">Home</a></h3>
+	        </li>
+	      </ul>
+    </div>
+		<div id="pxnav"> </div>
 		
-    <div id="pxlogo"><img src="/pxlogo.png"> <a href="www.pixeldust.tv"></a></div>
-    <ul>
-  
-	  <li><a></a>    </li>
-            <li><a href="https://metaplex.pixeldust.tv">Metaplex</a></li>
-            <li><a href="#mint">Mint</a></li>
-            <li class="dropdown">
-              <a href="javascript:void(0)" class="dropbtn">Project</a>
-              <div class="dropdown-content">
-                <a href="#">SolRugs</a>
-                <a href="https://nft.pixeldust.tv/TTREX">TeddyTrex</a>
-                <a href="#">SeaMonsters</a>
-              </div>
-            </li>
-            <li class="dropdown">
-                <a href="javascript:void(0)" class="dropbtn">Store</a>
-                <div class="dropdown-content">
-                  <a href="https://solsea.io/collection/61fadf96872a3b5b0f85ddd0">SolSea</a>
-                  <a href="#">MagicEden</a>
-                  <a href="#">SolanArt</a>
-                </div>
-      </li>
-              <li><a href="#home">Home</a></li>
-        </ul>
+		<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 <table width="100%" border="0"  class="hero">
   <tbody>
         <tr>
@@ -50,7 +60,7 @@
 
     <footer>
       <ul>
-          <li><a href="https://discord.gg/hVaMCn2Y"><img src="/discord.png" ></a></li>
+          <li><a href="https://discord.gg/VQvzSHtNbR"><img src="/discord.png" ></a></li>
           <li><a href="https://twitter.com/PixeldustNFT"><img src="/twitter.png"></a></li>
       </ul>
   </footer>
