--- a/TTREX.html
+++ b/TTREX.html
@@ -50,7 +50,7 @@
     </div>
 		<div id="pxnav"> </div>
 		
-		<div class='embed-container'><iframe src='https://player.vimeo.com/video/678258038?h=0852551b1d' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+		<div class='embed-container'><iframe src='https://player.vimeo.com/video/678258038?h=0852551b1d' frameborder='0'loop='1' autoplay='1' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 		
 		
 			
@@ -100,7 +100,7 @@
 				
             <footer>
                 <ul>
-                    <li><a href="https://discord.gg/VQvzSHtNbR"><img src="/discord.png" ></a></li>
+                    <li><a href="https://discord.gg/hVaMCn2Y"><img src="/discord.png" ></a></li>
                     <li><a href="https://twitter.com/PixeldustNFT"><img src="/twitter.png"></a></li>
                 </ul>
             </footer>
