--- a/TTREX.html
+++ b/TTREX.html
@@ -50,7 +50,7 @@
     </div>
 		<div id="pxnav"> </div>
 		
-		<div class='embed-container'><iframe src='https://player.vimeo.com/video/678258038?h=0852551b1d' frameborder='0'loop='1' autoplay='1' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+		<div class='embed-container'><iframe src='https://player.vimeo.com/video/678258038?h=0852551b1d?autoplay=1&loop=1' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 		
 		
 			
