--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
     
 	<header>
-		<img class = "navlogo" src="pxlogo.png" alt="logo">
+		<img class = "navlogo" src="pxlogo.png" href="https://nft.pixeldust.tv" alt="logo">
 			<nav>
 			<ul class="nav_links">
 				<li class="dropdown">
@@ -30,7 +30,7 @@
 				<li class="dropdown">
 		      		<a href="javascript:void(0)" class="dropbtn">Projects</a> 
 		      		<div class="dropdown-content">
-		      		<a href="https://nft.pixeldust.tv/TTREXMint">TeddyTrex</a> 
+		      		<a href="https://nft.pixeldust.tv/TTREX">TeddyTrex</a> 
 					<a href="https://nft.pixeldust.tv/SolRugsMint">SolRugs</a> 
 					<a href="https://nft.pixeldust.tv/SolRugsMint">SeaCreatures</a>
 	          		</div>
@@ -48,7 +48,7 @@
 				<li><a href=https://nft.pixeldust.tv/Team>Team</a></li>
 			</ul>
 			</nav>
-			<a class="cta" href="#"><button>Metaplex</button></a>
+			<a class="cta" href="https://metaplex.pixeldust.tv"><button>Metaplex</button></a>
 		</header>
 		
 		<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
