--- a/TTREX.html
+++ b/TTREX.html
@@ -16,7 +16,7 @@
 		
        
        <header>
-		<img class = "navlogo" src="pxlogo.png" alt="logo">
+		<img class = "navlogo" src="pxlogo.png" href="https://nft.pixeldust.tv" alt="logo">
 			<nav>
 			<ul class="nav_links">
 				<li class="dropdown">
@@ -31,7 +31,7 @@
 				<li class="dropdown">
 		      		<a href="javascript:void(0)" class="dropbtn">Projects</a> 
 		      		<div class="dropdown-content">
-		      		<a href="https://nft.pixeldust.tv/TTREXMint">TeddyTrex</a> 
+		      		<a href="https://nft.pixeldust.tv/TTREX">TeddyTrex</a> 
 					<a href="https://nft.pixeldust.tv/SolRugsMint">SolRugs</a> 
 					<a href="https://nft.pixeldust.tv/SolRugsMint">SeaCreatures</a>
 	          		</div>
@@ -49,7 +49,7 @@
 				<li><a href=https://nft.pixeldust.tv/Team>Team</a></li>
 			</ul>
 			</nav>
-			<a class="cta" href="#"><button>Metaplex</button></a>
+			<a class="cta" href="https://metaplex.pixeldust.tv"><button>Metaplex</button></a>
 		</header>
 		
 		<div class='embed-container'><iframe src='https://player.vimeo.com/video/678258038?h=0852551b1d' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
