--- a/TTREXMint.html
+++ b/TTREXMint.html
@@ -14,7 +14,7 @@
     </head>
     <body>
 		<header>
-		<img class = "navlogo" src="pxlogo.png" alt="logo">
+		<img class = "navlogo" src="pxlogo.png" href="https://nft.pixeldust.tv" alt="logo">
 			<nav>
 			<ul class="nav_links">
 				<li class="dropdown">
@@ -29,7 +29,7 @@
 				<li class="dropdown">
 		      		<a href="javascript:void(0)" class="dropbtn">Projects</a> 
 		      		<div class="dropdown-content">
-		      		<a href="https://nft.pixeldust.tv/TTREXMint">TeddyTrex</a> 
+		      		<a href="https://nft.pixeldust.tv/TTREX">TeddyTrex</a> 
 					<a href="https://nft.pixeldust.tv/SolRugsMint">SolRugs</a> 
 					<a href="https://nft.pixeldust.tv/SolRugsMint">SeaCreatures</a>
 	          		</div>
@@ -47,7 +47,7 @@
 				<li><a href=https://nft.pixeldust.tv/Team>Team</a></li>
 			</ul>
 			</nav>
-			<a class="cta" href="#"><button>Metaplex</button></a>
+			<a class="cta" href="https://metaplex.pixeldust.tv"><button>Metaplex</button></a>
 		</header>
 		
         <noscript>You need to enable JavaScript to run this app.</noscript>
