--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <body>
     
 	<header>
-		<img class = "navlogo" src="pxlogo.png" href="https://nft.pixeldust.tv" alt="logo">
+		<a href="https://nft.pixeldust.tv">
+		<img class = "navlogo" src="pxlogo.png"  alt="logo"> </a>
 			<nav>
 			<ul class="nav_links">
 				<li class="dropdown">
