--- a/TTREX.html
+++ b/TTREX.html
@@ -16,7 +16,8 @@
 		
        
        <header>
-		<img class = "navlogo" src="pxlogo.png" href="https://nft.pixeldust.tv" alt="logo">
+		<a href="https://nft.pixeldust.tv">
+		<img class = "navlogo" src="pxlogo.png"  alt="logo"> </a>
 			<nav>
 			<ul class="nav_links">
 				<li class="dropdown">
