--- a/TTREXMint.html
+++ b/TTREXMint.html
@@ -14,9 +14,11 @@
     </head>
     <body>
 		<header>
-		<img class = "navlogo" src="pxlogo.png" href="https://nft.pixeldust.tv" alt="logo">
+		
+		<img class = "navlogo" src="pxlogo.png"  alt="logo"> 
 			<nav>
 			<ul class="nav_links">
+				<li><a href="https://nft.pixeldust.tv">Home</a></li>
 				<li class="dropdown">
 		      		<a href="javascript:void(0)" class="dropbtn">Store</a> 
 		      		<div class="dropdown-content">
