--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <body>
     
 	<header>
-		<a href="https://nft.pixeldust.tv">
-		<img class = "navlogo" src="pxlogo.png"  alt="logo"> </a>
+		
+		<img class = "navlogo" src="pxlogo.png"  alt="logo"> 
 			<nav>
 			<ul class="nav_links">
+				<li><a href="https://nft.pixeldust.tv">Home</a></li>
 				<li class="dropdown">
 		      		<a href="javascript:void(0)" class="dropbtn">Store</a> 
 		      		<div class="dropdown-content">
