--- a/TTREXMint.html
+++ b/TTREXMint.html
@@ -13,7 +13,7 @@
         <link href="/static/css/main.27d5ecdb.chunk.css" rel="stylesheet" />
     </head>
     <body>
-		<header>
+		<navlogo>
 		
 		<img class = "navlogo" src="pxlogo.png"  alt="logo"> 
 			
