--- a/TTREXMint.html
+++ b/TTREXMint.html
@@ -20,10 +20,16 @@
             <div class="mint-top">
                 <img class="logo" src="/TeddyTrexLogo.png" alt="Teddy TRex(TTREX)" />
             </div>
+
+            <div class="container">
             <div class="box">
-                <div class="mint-img"><img class="photo1" src="/DinoCycle3.gif" alt="Teddy Trex, which one will you get?" /></div>
+                <div class="mint-img"><img class="photo2" src="/Crane_Game.gif" alt="Teddy Trex, which one will you get?" />
+                </div>
+
+                <div class="mint-img"><img class="photo1" src="/DinoCycle3.gif" alt="Teddy Trex, which one will you get?" />
+                </div>
             </div>
-           
+            </div>
             <div id="root"></div>
             <div class="mint-info">After a successful mint, it takes about 30 seconds for the "Remaining" quantity to be updated.</div>
 			
