--- a/TTREXMint.html
+++ b/TTREXMint.html
@@ -36,7 +36,7 @@
             
             <footer>
                 <ul>
-                    <li><a href="https://nft.pixeldust.tv">Home</a></li>
+                    <li> <a href="nft.pixeldust.tv"><img alt="pxlogo" src="pxlogo.png"></li>
                     <li><a href="https://discord.gg/hVaMCn2Y">Discord</a></li>
                     <li><a href="https://twitter.com/PixeldustNFT">Twitter</a></li>
                 </ul>
