--- a/TTREXMint.html
+++ b/TTREXMint.html
@@ -15,7 +15,10 @@
     <body>
 		
         <noscript>You need to enable JavaScript to run this app.</noscript>
-       
+        <div class="bird-container">
+            <div class="bird"></div>
+          </div>
+          
         <div class="wrapper">
             <div class="mint-top">
                 <img class="logo" src="/TeddyTrexLogo.png" alt="Teddy TRex(TTREX)" />
