--- a/TTREXMint.html
+++ b/TTREXMint.html
@@ -18,7 +18,7 @@
         <div class="bird-container">
             <div class="bird"></div>
           </div>
-          
+
         <div class="wrapper">
             <div class="mint-top">
                 <img class="logo" src="/TeddyTrexLogo.png" alt="Teddy TRex(TTREX)" />
@@ -39,7 +39,7 @@
             
             <footer>
                 <ul>
-                    <li> <a href="nft.pixeldust.tv"><img alt="pxlogo" src="pxlogo.png"></li>
+                    <li> <a href="nft.pixeldust.tv"><img class="pxlogo" alt="pxlogo" src="pxlogo.png"></li>
                     <li><a href="https://discord.gg/hVaMCn2Y">Discord</a></li>
                     <li><a href="https://twitter.com/PixeldustNFT">Twitter</a></li>
                 </ul>
