--- a/TTREXMint.html
+++ b/TTREXMint.html
@@ -38,7 +38,7 @@
             <div class="bird-container bird-container--four">
                 <div class="bird bird--four"></div>
             </div>
-            
+
             <div class="container">
             <div class="box">
                 <div class="mint-img"><img class="photo1" src="/Crane_Game.gif" alt="Teddy Trex, which one will you get?" />
@@ -55,8 +55,8 @@
             <footer>
                 <ul>
                     <li> <a href="nft.pixeldust.tv"><img class="pxlogo" alt="pxlogo" src="pxlogo.png"></li>
-                    <li><a href="https://discord.gg/hVaMCn2Y">Discord</a></li>
-                    <li><a href="https://twitter.com/PixeldustNFT">Twitter</a></li>
+                    <li><a href="https://discord.gg/hVaMCn2Y"><img src="discord.png"></li>
+                    <li><a href="https://twitter.com/PixeldustNFT"><img src="twitter.png"></li>
                 </ul>
             </footer>
 			
