--- a/TTREXMint.html
+++ b/TTREXMint.html
@@ -38,7 +38,7 @@
             
             <footer>
                 <ul>
-                    <li> <a href="nft.pixeldust.tv"><img class="pxlogo" alt="pxlogo" src="pxlogo.png"></li>
+                    <li> <a href="https://nft.pixeldust.tv"><img class="pxlogo" alt="pxlogo" src="pxlogo.png"></li>
                     <li><a href="https://discord.gg/hVaMCn2Y"><img class="social" src="discord.png"></li>
                     <li><a href="https://twitter.com/PixeldustNFT"><img class="social" src="twitter.png"></li>
                 </ul>
