discord link fix

--- a/TTREXMint.html
+++ b/TTREXMint.html
@@ -39,7 +39,7 @@
             <footer>
                 <ul>
                     <li> <a href="https://nft.pixeldust.tv"><img class="pxlogo" alt="pxlogo" src="pxlogo.png"></li>
-                    <li><a href="https://discord.gg/hVaMCn2Y"><img class="social" src="discord.png"></li>
+                    <li><a href="https://discord.com/invite/VQvzSHtNbR"><img class="social" src="discord.png"></li>
                     <li><a href="https://twitter.com/PixeldustNFT"><img class="social" src="twitter.png"></li>
                 </ul>
             </footer>
